# wayland-kbd-osd

./: AGENTS.md  Cargo.toml  README.md  generate_toml.py  install-dev-deps.sh  keys.toml  run_headless.sh  take_screenshot.sh
src/: check.rs  config.rs  draw.rs  event.rs  keycodes.rs  main.rs  poll_fds.rs  setup.rs  text_utils.rs  wayland.rs  wayland_drawing_cache.rs
tests/: startup_test.rs
tests/fixtures/: libinput-recording-abc.yaml
