[package]
name = "wayland-kbd-osd"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.27", features = ["std"] }
wayland-client = { version = "0.31.10", features = ["log"] }
wayland-protocols = { version = "0.31.2", features = ["client", "unstable"] }
tempfile = "3.10.1"
memmap2 = "0.9.4"
env_logger = "0.11.3"
raqote = "0.8.5"
rusttype = "0.9.3"
euclid = "0.22.11" # For Angle
input = "0.9.1"
libc = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7" # For flexible TOML value parsing
regex = "1.10"      # For parsing input-event-codes.h
once_cell = "1.19"  # For static LAZY KEYCODE_MAP
